# crucian

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
include/crucian/: ArrayAlgo.hpp  Cell.hpp  Cells4.hpp  Exception.hpp  InSynapse.hpp  Log.hpp  LogItem.hpp  Math.hpp  MathTypes.hpp  OutSynapse.hpp  Random.hpp  Segment.hpp  SegmentUpdate.hpp  SparseBinaryMatrix.hpp  SparseMatrix.hpp  SpatialPooler.hpp  StlIo.hpp  Topology.hpp  Types.hpp  Utils.hpp
include/crucian/algorithms/: Cell.hpp  Cells4.hpp  InSynapse.hpp  OutSynapse.hpp  Segment.hpp  SegmentUpdate.hpp  SpatialPooler.hpp
include/crucian/math/: ArrayAlgo.hpp  Math.hpp  MathTypes.hpp  SparseBinaryMatrix.hpp  SparseMatrix.hpp  StlIo.hpp  Topology.hpp  Utils.hpp
include/crucian/types/: Exception.hpp  Types.hpp
include/crucian/utils/: Log.hpp  LogItem.hpp  Random.hpp
include/nust/algorithms/: Cell.hpp  Cells4.hpp  InSynapse.hpp  OutSynapse.hpp  Segment.hpp  SegmentUpdate.hpp  SpatialPooler.hpp
include/nust/math/: ArrayAlgo.hpp  Math.hpp  SparseBinaryMatrix.hpp  SparseMatrix.hpp  StlIo.hpp  Topology.hpp  Types.hpp  Utils.hpp
include/nust/types/: Exception.hpp  NtaTypes.hpp  Types.hpp
include/nust/utils/: Log.hpp  LogItem.hpp  LoggingException.hpp  Random.hpp
src/: Cell.cpp  Cells4.cpp  Exception.cpp  InSynapse.cpp  LogItem.cpp  OutSynapse.cpp  Random.cpp  Segment.cpp  SegmentUpdate.cpp  SpatialPooler.cpp  StlIo.cpp  Topology.cpp
src/algorithms/: Cell.cpp  Cells4.cpp  InSynapse.cpp  OutSynapse.cpp  Segment.cpp  SegmentUpdate.cpp  SpatialPooler.cpp
src/math/: StlIo.cpp  Topology.cpp
src/types/: Exception.cpp
src/utils/: LogItem.cpp  LoggingException.cpp  Random.cpp
test/: Cells4Test.cpp  RandomTest.cpp  SegmentTest.cpp  SparseMatrixTest.cpp  SpatialPoolerTest.cpp  TopologyTest.cpp
